--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+v0.2
+* add support for pydantic and returning models that can be converted to a dict (author @autoferrit)
+* update a README (author @autoferrit)
+
 v0.1.1
 * remove .py2 from the built package on the pypi.org
 
